<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.barcodeapi</groupId>
	<artifactId>server</artifactId>
	<version>0.0.4</version>

	<name>server</name>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
	</properties>

	<build>

		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>

		<plugins>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>org.barcodeapi.Launcher</mainClass>
						</manifest>
					</archive>
					<finalName>server</finalName>
					<appendAssemblyId>false</appendAssemblyId>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>

		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>9.4.58.v20250814</version>
		</dependency>

		<dependency>
			<groupId>net.sf.barcode4j</groupId>
			<artifactId>barcode4j</artifactId>
			<version>2.1</version>
		</dependency>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
			<version>3.5.4</version>
		</dependency>

		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>javase</artifactId>
			<version>3.5.4</version>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20251224</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.12.0</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.mclarkdev.tools</groupId>
			<artifactId>libapriltag</artifactId>
			<version>1.7.0</version>
		</dependency>

		<dependency>
			<groupId>com.mclarkdev.tools</groupId>
			<artifactId>libargs</artifactId>
			<version>1.7.0</version>
		</dependency>

		<dependency>
			<groupId>com.mclarkdev.tools</groupId>
			<artifactId>libmetrics</artifactId>
			<version>1.7.0</version>
		</dependency>

		<dependency>
			<groupId>com.mclarkdev.tools</groupId>
			<artifactId>liblog</artifactId>
			<version>1.7.0</version>
		</dependency>

		<dependency>
			<groupId>com.mclarkdev.tools</groupId>
			<artifactId>libloggelf</artifactId>
			<version>1.7.0</version>
		</dependency>

		<dependency>
			<groupId>com.mclarkdev.tools</groupId>
			<artifactId>libextras</artifactId>
			<version>1.7.0</version>
		</dependency>

		<dependency>
			<groupId>com.mclarkdev.tools</groupId>
			<artifactId>libobjectpooler</artifactId>
			<version>1.7.0</version>
		</dependency>
	</dependencies>
</project>
